CF_tomcat_stack_v2.yml
Resources:
  EC2Instance:
    Type: 'AWS::EC2::Instance'
    # Metadata:
    #   AWS::CloudFormation::Init:
    #    config:
    #       packages:
    #         yum:
    #           tomcat7: []
    #       services:
    #         sysvinit:
    #           tomcat7:
    #             enabled: "true"
    #             ensureRunning: "true"
    Properties:
      InstanceType: t2.micro
      ImageId: ami-050e1ec030abb8dde
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      KeyName: MasterKey
      # UserData:
      #   "Fn::Base64":
      #     !Sub |
      #       #!/bin/bash -xe
      #       set -x
      #       exec > >(tee /var/log/user-data.log|logger -t user-data ) 2>&1
      #       echo BEGIN
      #       # Get the latest CloudFormation package
      #       yum update -y aws-cfn-bootstrap
      #       # Start cfn-init
      #       /opt/aws/bin/cfn-init -s ${AWS::StackId} -r EC2Instance --region ${AWS::Region} || error_exit 'Failed to run cfn-init'
      #       # Start up the cfn-hup daemon to listen for changes to the EC2 instance metadata
      #       /opt/aws/bin/cfn-hup || error_exit 'Failed to start cfn-hup'
      #       # All done so signal success
      #       /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource EC2Instance --region ${AWS::Region}

  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
